padding spacing fixed

--- a/src/scss/abstracts/_placeholder.scss
+++ b/src/scss/abstracts/_placeholder.scss
@@ -3,8 +3,7 @@
   height: inherit;
   font-size: 16px;
   line-height: 24px;
-  padding: 12px 0px;
-  padding-left: 18px;
+  padding: 12px 18px;
   text-transform: capitalize;
   border: 1px solid #e9eaf0;
   &::placeholder {
